--- a/manage1/templates/layout/header.html
+++ b/manage1/templates/layout/header.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="{{h.url(controller='student',action='index')}}">Students</a></li>
-        <li><a href="#">Course</a></li>
+        <li><a href="{{h.url(controller='course',action='index')}}">Course</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
