--- a/manage1/templates/course/index.html
+++ b/manage1/templates/course/index.html
@@ -1,10 +1,10 @@
 {% extends "/layout/base.html" %}
-{% block title %}Student - Index {% endblock %}
+{% block title %}Course - Index {% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="col-md-4 col-md-offset-2">
-            <a href="{{h.url(controller='student', action='new')}}" class="btn btn-primary">New Student</a>
+            <a href="{{h.url(controller='course', action='new')}}" class="btn btn-primary">New Course</a>
         </div>
     </div>
     <br>
@@ -13,20 +13,22 @@
             <table class="table table-bordered">
             <thead>
                 <tr>
+                    <th class="center">Code</th>
                     <th class="center">Name</th>
-                    <th class="center">Email</th>
+                    <th class="center">Number</th>
                     <th class="center" colspan="3">Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for student in c.students %}
+                {% for course in c.courses %}
                     <tr>
-                        <td class="center">{{student.name}}</td>
-                        <td class="center">{{student.email}}</td>
-                        <td><a href="{{h.url(controller='student',action='edit',id=student.id)}}">Edit</a></td>
-                        <td><a href="{{h.url(controller='student',action='show',id=student.id)}}">Show</a></td>
+                        <td class="center">{{course.code}}</td>
+                        <td class="center">{{course.name}}</td>
+                        <td class="center">{{course.number}}</td>
+                        <td><a href="{{h.url(controller='course',action='edit',id=course.id)}}">Edit</a></td>
+                        <td><a href="{{h.url(controller='course',action='show',id=course.id)}}">Show</a></td>
                         <td>
-                            <a href="{{h.url(controller='student',action='delete',id=student.id)}}"
+                            <a href="{{h.url(controller='course',action='delete',id=course.id)}}"
                                data-method="delete" onclick="return confirm('Are you sure you want to delete?');">
                                 Delete
                             </a>
