--- a/manage1/templates/student/show.html
+++ b/manage1/templates/student/show.html
@@ -1,15 +1,75 @@
-<div class="row">
-    <section class="user_info">
-      <h1>
-        Name: {{c.student.name}}
-      </h1>
-      <hr>
+{% extends "/layout/base.html" %}
+{% block title %}Student - Index {% endblock %}
 
-      <div class="list-group">
-        <div class="list-group-item">
-          <span class="glyphicon glyphicon-user"></span>
-          Email: {{c.student.email}}
+{% block content %}
+<div class="row">
+    <div class="col-md-3">
+        <h1>
+            Name: {{c.student.name}}
+        </h1>
+        <hr>
+
+        <div class="list-group">
+            <div class="list-group-item">
+                <span class="glyphicon glyphicon-user"></span>
+                Email: {{c.student.email}}
+            </div>
         </div>
-      </div>
-    </section>
+    </div>
+    <div class="col-md-5">
+        <h3>Registered</h3>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th class="center">Code</th>
+                <th class="center">Name</th>
+                <th class="center">Number</th>
+                <th class="center">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+                {% if c.student.courses|length == 0 %}
+                    <tr>
+                        <td colspan="4">Chua dang ki lop nao</td>
+                    </tr>
+                {% else %}
+                    {%for course in c.student.courses%}
+                    <tr>
+                        <td class="center"><a href="{{h.url(controller='course',action='show',id=course.id)}}">{{course.code}}</a></td>
+                        <td class="center">{{course.name}}</td>
+                        <td class="center">{{course.number}}</td>
+                        <td>
+                            <a href="{{h.url(controller='register',action='delete',course_id=course.id, student_id = c.student.id)}}"
+                               data-method="delete" onclick="return confirm('Are you sure you want to cancel?');">
+                                Cancel
+                            </a>
+                        </td>
+                    </tr>
+                    {%endfor%}
+                {% endif %}
+            </tbody>
+        </table>
+        <div class="text-center">
+        </div>
+    </div>
+    <div class="col-md-3">
+        {{ h.form(h.url(controller='register', action='create'),method='POST') }}
+            {% if c.form_errors %}
+                {% if c.form_errors.has_key('student_id') %}
+                <p class="error">{{ c.form_errors['student_id'] }}</p>
+                {% endif %}
+                Student: {{ h.text('email', value=c.form_result['email'] or '',
+                class="form-control") }}
+            {% else %}
+                {{ h.hidden('student_id', c.student.id) }}
+                Course: {{ h.select('course_id', None, h.create_courses_options(c.courses),
+                prompt="Please choose ...", class="form-control") }}
+                {% endif %}
+            <br>
+            <div class="text-center">
+                {{ h.submit('', 'Submit',class="btn btn-primary") }}
+            </div>
+        {{ h.end_form() }}
+    </div>
 </div>
+{% endblock %}
