--- a/manage1/templates/course/index.html
+++ b/manage1/templates/course/index.html
@@ -20,6 +20,11 @@
                 </tr>
             </thead>
             <tbody>
+                {% if c.courses|length == 0 %}
+                    <tr>
+                        <td colspan="6">Chua co lop nao</td>
+                    </tr>
+                {% else %}
                 {% for course in c.courses %}
                     <tr>
                         <td class="center">{{course.code}}</td>
@@ -35,6 +40,7 @@
                         </td>
                     </tr>
                 {% endfor %}
+                {% endif %}
             </tbody>
             </table>
             <div class="text-center">
