--- a/manage1/templates/search/student.html
+++ b/manage1/templates/search/student.html
@@ -44,10 +44,12 @@
                         <td><a href="{{h.url(controller='student',action='show',id=student.id)}}">Show</a></td>
                     </tr>
                 {% endfor %}
+                <div >
+                    {{c.students.pager('Page $page: $link_previous $link_next ~4~',
+                        email=c.form_result['email'], name=c.form_result['name'])}}
+                </div>
                 {% endif %}
             </tbody>
             </table>
-            <div class="text-center">
-            </div>
         </div>
 {% endblock %}
