upload image with js

--- a/manage1/templates/student/show.html
+++ b/manage1/templates/student/show.html
@@ -4,9 +4,28 @@
 {% block content %}
 <div class="row">
     <div class="col-md-3">
-        <h1>
+        <h3>
             Name: {{c.student.name}}
-        </h1>
+        </h3>
+        <hr>
+        <div>
+            <form method='post'
+                  style="background:url({{h.image_name(c.student)}}); background-size: 200px 200px; background-repeat: no-repeat;"
+                  id ='upload-file' enctype="multipart/form-data">
+                <input type="file" name="avatar" id="my_file" />
+                <div id="div_action" style="display: none" class="modal">
+                    <div class="modal-content">
+                        <div id="img_src"></div>
+                        <hr>
+                        <div id='action_button'>
+                            <input type="hidden" name = 'student' id = 'student_id' value="{{request.urlvars['id']}}" />
+                            <input type='submit' id='upload-file-btn' value='OK' class="btn btn-primary" style="width: 10%"/>
+                            <input type='submit' id='cancle-upload-btn' value='CANCLE' class="btn btn-danger" style="width: 10%"/>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
         <hr>
 
         <div class="list-group">
@@ -72,4 +91,73 @@
         {{ h.end_form() }}
     </div>
 </div>
+<script type="text/javascript">
+
+    var imageLoader = document.getElementById('my_file');
+    imageLoader.addEventListener('change', handleImage, false);
+    var MAX_SIZE = 5*1024*1024 // 5Mb = 5 * 1024 * 1024 (Byte)
+    function handleImage(e) {
+        var FileUploadPath = imageLoader.value;
+        var Extension = FileUploadPath.substring(FileUploadPath.lastIndexOf('.') + 1).toLowerCase();
+        //The file uploaded is an image
+        if (Extension == "gif" || Extension == "png" || Extension == "bmp"
+            || Extension == "jpeg" || Extension == "jpg") {
+            if(imageLoader.files[0].size > MAX_SIZE){
+                alert("Photo max size is 5Mb. ");
+            }
+            else{
+                e.stopPropagation();
+                e.preventDefault();
+                var reader = new FileReader();
+                reader.onload = function (event) {
+                    $('#img_src').html( '<img id="blah" height="350px" src="'+event.target.result+'"/>' );
+                    $('#div_action').show();
+                    setTimeout(initCropper, 1000);
+                }
+                reader.readAsDataURL(e.target.files[0]);
+            }
+        }
+        else{
+            alert("Photo only allows file types of GIF, PNG, JPG, JPEG and BMP. ");
+        }
+    }
+
+    $('#cancle-upload-btn').click(function() {
+        $('#div_action').hide();
+    });
+
+
+    function initCropper(){
+        console.log("Came here")
+        var image = document.getElementById('blah');
+        var cropper = new Cropper(image, {
+          aspectRatio: 1 / 1,
+          crop: function(e) {
+            console.log(e.detail.x);
+            console.log(e.detail.y);
+          }
+        });
+
+        // On crop button clicked
+        document.getElementById('upload-file-btn').addEventListener('click', function(){
+            cropper.getCroppedCanvas().toBlob(function (blob) {
+                  var fdata = new FormData();
+                  fdata.append('student_id',$('#student_id').val());
+                  fdata.append('file', blob);
+                  $.ajax({
+                      type: 'POST',
+                      url: '/student/save_avatar',
+                      data: fdata,
+                      contentType: false,
+                      processData: false,
+                      success: function(data) {
+                          $('#div_action').hide();
+                          document.getElementById('upload-file').style.backgroundImage = 'url('+data+')';
+                      },
+                  });
+                  return false;
+            });
+        })
+    }
+</script>
 {% endblock %}
