--- a/manage1/templates/layout/base.html
+++ b/manage1/templates/layout/base.html
@@ -7,6 +7,9 @@
         {{h.stylesheet_link(h.url('/assets/custom.css'))}}
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="/assets/alert.js"></script>
+        {{h.javascript_link(h.url('/assets/avatar.js'))}}
+        <link  href="/assets/cropper/cropper.css" rel="stylesheet">
+        <script src="/assets/cropper/cropper.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     </head>
     <body>
