--- a/manage1/templates/student/show.html
+++ b/manage1/templates/student/show.html
@@ -92,7 +92,6 @@
     </div>
 </div>
 <script type="text/javascript">
-
     var imageLoader = document.getElementById('my_file');
     imageLoader.addEventListener('change', handleImage, false);
     var MAX_SIZE = 5*1024*1024 // 5Mb = 5 * 1024 * 1024 (Byte)
@@ -110,7 +109,7 @@
                 e.preventDefault();
                 var reader = new FileReader();
                 reader.onload = function (event) {
-                    $('#img_src').html( '<img id="blah" height="350px" src="'+event.target.result+'"/>' );
+                    $('#img_src').html( '<img id="blah" height="400px" src="'+event.target.result+'"/>' );
                     $('#div_action').show();
                     setTimeout(initCropper, 1000);
                 }
@@ -120,6 +119,7 @@
         else{
             alert("Photo only allows file types of GIF, PNG, JPG, JPEG and BMP. ");
         }
+        $(this).val("");
     }
 
     $('#cancle-upload-btn').click(function() {
@@ -132,6 +132,7 @@
         var image = document.getElementById('blah');
         var cropper = new Cropper(image, {
           aspectRatio: 1 / 1,
+          viewMode: 2,
           crop: function(e) {
             console.log(e.detail.x);
             console.log(e.detail.y);
@@ -139,25 +140,26 @@
         });
 
         // On crop button clicked
-        document.getElementById('upload-file-btn').addEventListener('click', function(){
+        $('#upload-file-btn').click(function(){
             cropper.getCroppedCanvas().toBlob(function (blob) {
-                  var fdata = new FormData();
-                  fdata.append('student_id',$('#student_id').val());
-                  fdata.append('file', blob);
-                  $.ajax({
-                      type: 'POST',
-                      url: '/student/save_avatar',
-                      data: fdata,
-                      contentType: false,
-                      processData: false,
-                      success: function(data) {
-                          $('#div_action').hide();
-                          document.getElementById('upload-file').style.backgroundImage = 'url('+data+')';
-                      },
-                  });
-                  return false;
+                var fdata = new FormData();
+                fdata.append('student_id',$('#student_id').val());
+                fdata.append('file', blob);
+                $.ajax({
+                    type: 'POST',
+                    url: '/student/save_avatar',
+                    data: fdata,
+                    contentType: false,
+                    processData: false,
+                    success: function(data) {
+                        $('#div_action').hide();
+                        document.getElementById('upload-file').style.backgroundImage = 'url('+data+')';
+                    },
+                });
+                return false;
             });
-        })
+            return false;
+        });
     }
 </script>
 {% endblock %}
