--- a/manage1/templates/layout/header.html
+++ b/manage1/templates/layout/header.html
@@ -23,9 +23,15 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            {% if h.auth.authorized(h.auth.remote_user) and not (
+               request.urlvars['controller'] == 'account' and request.urlvars['action'] == 'signout') %}
+                <li>Signed in as {{request.environ['REMOTE_USER']}},
+                  <a href="{{h.url('signout')}}">Sign out</a></li>
+            {% else %}
+              <li><a href="{{h.url('signin')}}">Sign in</a></li>
+            {% endif %}
             <li class="divider"></li>
+            <li><a href="{{h.url('signedin')}}">Signed in</a></li>
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
