--- a/manage1/templates/layout/header.html
+++ b/manage1/templates/layout/header.html
@@ -23,7 +23,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
-            {% if h.auth.authorized(h.auth.remote_user) and not (
+            {% if h.auth.authorized(h.auth.is_valid_user) and not (
                request.urlvars['controller'] == 'account' and request.urlvars['action'] == 'signout') %}
                 <li>Signed in as {{request.environ['REMOTE_USER']}},
                   <a href="{{h.url('signout')}}">Sign out</a></li>
