--- a/manage1/templates/student/index.html
+++ b/manage1/templates/student/index.html
@@ -26,7 +26,7 @@
                 {% else %}
                     {% for student in c.students %}
                         <tr>
-                            <td class="center">{{student.name}}</td>
+                            <td class="center">{{student.user_info.name}}</td>
                             <td class="center">{{student.email}}</td>
                             <td><a href="{{h.url(controller='student',action='edit',id=student.id)}}">Edit</a></td>
                             <td><a href="{{h.url(controller='student',action='show',id=student.id)}}">Show</a></td>
