--- a/manage1/templates/layout/header.html
+++ b/manage1/templates/layout/header.html
@@ -20,19 +20,20 @@
         <li><a href="{{h.url(controller='search',action='course')}}">Search Course</a></li>
         <li><a href="{{h.url(controller='search',action='student')}}">Search Student</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            {% if h.auth.authorized(h.auth.is_valid_user) and not (
+
+          {% if h.auth.authorized(h.auth.is_valid_user) and not (
                request.urlvars['controller'] == 'account' and request.urlvars['action'] == 'signout') %}
-                <li>Signed in as {{request.environ['REMOTE_USER']}},
-                  <a href="{{h.url('signout')}}">Sign out</a></li>
-            {% else %}
-              <li><a href="{{h.url('signin')}}">Sign in</a></li>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{request.environ['REMOTE_USER']}}<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="{{h.url('signout')}}">Sign out</a></li>
+                <li class="divider"></li>
+                <li><a href="{{h.url('signedin')}}">Signed in</a></li>
+          {% else %}
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="{{h.url('signup')}}">Sign up</a></li>
+                <li><a href="{{h.url('signin')}}">Sign in</a></li>
             {% endif %}
-            <li class="divider"></li>
-            <li><a href="{{h.url('signedin')}}">Signed in</a></li>
-            <li><a href="#">Separated link</a></li>
           </ul>
         </li>
       </ul>
