--- a/manage1/templates/layout/email_layout/signup.html
+++ b/manage1/templates/layout/email_layout/signup.html
@@ -2,5 +2,5 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<a href="{{request.get_host}}+{{h.url(controller='student', action='show', id = c.user.id)}}">Click here</a>
+<a href="{{h.url('http://'+request.host+'/users/active/?email='+c.user.email+'&access_token='+(c.user.id|string))}}">Click here</a>
 </body>
