--- a/manage1/templates/layout/base.html
+++ b/manage1/templates/layout/base.html
@@ -7,9 +7,16 @@
         {{h.stylesheet_link(h.url('/assets/custom.css'))}}
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="/assets/alert.js"></script>
+        <script src="/assets/schedue.js"></script>
         <script src="/assets/avatar.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-        <link  href="/assets/cropper/cropper.css" rel="stylesheet">
+
+        <link href='/assets/fullcalendar/fullcalendar.css' rel='stylesheet' />
+        <script src='/assets/fullcalendar/moment.min.js' type="text/javascript"></script>
+        <script src='/assets/fullcalendar/jquery.min.js' type="text/javascript"></script>
+        <script src='/assets/fullcalendar/fullcalendar.js' type="text/javascript"></script>
+
+        <link href="/assets/cropper/cropper.css" rel="stylesheet">
         <script src="/assets/cropper/cropper.js" type="text/javascript"></script>
     </head>
     <body>
