--- a/manage1/templates/student/show.html
+++ b/manage1/templates/student/show.html
@@ -84,6 +84,10 @@
     </div>
     {% endif %}
 </div>
+<div>
+    <div id='calendar'>
+    </div>
+</div>
 <script type="text/javascript">
     var imageLoader = document.getElementById('my_file');
     imageLoader.addEventListener('change', handleImage, false);
