--- a/manage1/templates/student/show.html
+++ b/manage1/templates/student/show.html
@@ -85,7 +85,8 @@
     {% endif %}
 </div>
 <div>
-    <div id='calendar'>
+    <div id='alert_fullcalendar'></div>
+    <div id='calendar_student'>
     </div>
 </div>
 <script type="text/javascript">
