--- a/manage1/templates/layout/header.html
+++ b/manage1/templates/layout/header.html
@@ -13,9 +13,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="{{h.url(controller='student',action='index')}}">Students</a></li>
-        <li><a href="{{h.url(controller='course',action='index')}}">Course</a></li>
         {% if h.auth.authorized(h.auth.has_admin_role) %}
+          <li><a href="{{h.url(controller='admin/course',action='index')}}">Courses</a></li>
           <li><a href="{{h.url(controller='admin/register',action='new')}}">Register</a></li>
+        {% else %}
+          <li><a href="{{h.url(controller='course',action='index')}}">Courses</a></li>
         {% endif %}
       </ul>
 
