--- a/manage1/templates/layout/base.html
+++ b/manage1/templates/layout/base.html
@@ -6,6 +6,7 @@
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
         {{h.stylesheet_link(h.url('/assets/custom.css'))}}
         <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
         <script src="/assets/alert.js"></script>
         <script src="/assets/schedue.js"></script>
         <script src="/assets/avatar.js"></script>
@@ -18,21 +19,47 @@
 
         <link href="/assets/cropper/cropper.css" rel="stylesheet">
         <script src="/assets/cropper/cropper.js" type="text/javascript"></script>
+        <script>
+
+            // Enable pusher logging - don't include this in production
+            Pusher.logToConsole = true;
+
+            var pusher = new Pusher('15e72d442d16f43e033c', {
+              cluster: 'ap1',
+              encrypted: true
+            });
+
+            var channel = pusher.subscribe('my-channel');
+            channel.bind('my-event', function(data) {
+                $('#notification').prepend( "<tr><td>"+data.user_name+" "+data.action.toLowerCase()+
+                " "+data.object_type.toLowerCase()+" "+data.object_name+"</td><td>"+data.time+"</td></tr>");
+                if(data.object_type == 'COURSE'){
+                    $('#course-'+data.object_id).remove();
+                }
+            });
+        </script>
     </head>
     <body>
         <div class="header">
             {% include '/layout/header.html' %}
         </div>
-        <div class="container">
-            <ul class="flash">
-                {% for message in h.flash.pop_messages() %}
-                    <div class="alert alert-{{message.category}}">
-                        <li>{{ message}}</li>
-                    </div>
-                {% endfor %}
-            </ul>
-            {% block content %}{% endblock %}
-        </div>
+        <!--<div class="container">-->
+            <div class="row">
+                <div class="col-md-8">
+                    <ul class="flash">
+                        {% for message in h.flash.pop_messages() %}
+                            <div class="alert alert-{{message.category}}">
+                                <li>{{ message}}</li>
+                            </div>
+                        {% endfor %}
+                    </ul>
+                    {% block content %}{% endblock %}
+                </div>
+                <div class="col-md-4">
+                    {% include '/layout/activities.html' %}
+                </div>
+            </div>
+        <!--</div>-->
         <div class="footer">
             {% include '/layout/footer.html' %}
         </div>
