--- a/manage1/templates/layout/base.html
+++ b/manage1/templates/layout/base.html
@@ -9,9 +9,10 @@
         <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
         <script src="/assets/alert.js"></script>
         <script src="/assets/schedue.js"></script>
-        <script src="/assets/avatar.js"></script>
+        <script src="/assets/activity_pusher.js"></script>
+        <script src="/assets/alert.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
+        
         <link href='/assets/fullcalendar/fullcalendar.css' rel='stylesheet' />
         <script src='/assets/fullcalendar/moment.min.js' type="text/javascript"></script>
         <script src='/assets/fullcalendar/jquery.min.js' type="text/javascript"></script>
@@ -19,34 +20,6 @@
 
         <link href="/assets/cropper/cropper.css" rel="stylesheet">
         <script src="/assets/cropper/cropper.js" type="text/javascript"></script>
-        <script>
-
-            // Enable pusher logging - don't include this in production
-            Pusher.logToConsole = true;
-
-            var pusher = new Pusher('15e72d442d16f43e033c', {
-              cluster: 'ap1',
-              encrypted: true
-            });
-
-            var channel = pusher.subscribe('my-channel');
-            channel.bind('my-event', function(data) {
-                $('#activity').prepend( "<tr><td>"+data.user_name+" "+data.action.toLowerCase()+
-                " "+data.object_type.toLowerCase()+" "+data.object_name+"</td><td>"+data.time+"</td></tr>");
-                if(data.object_type == 'COURSE'){
-                    $('#course-'+data.object_id).remove();
-                }
-            });
-
-            <!--var pusher = new Pusher('15e72d442d16f43e033c', {-->
-              <!--authEndpoint: '/student/pusher_auth',-->
-              <!--auth: {-->
-                <!--headers: {-->
-                  <!--'X-CSRF-Token': 'asasasa'-->
-                <!--}-->
-              <!--}-->
-            <!--});-->
-        </script>
     </head>
     <body>
         <div class="header">
