--- a/manage1/templates/layout/activities.html
+++ b/manage1/templates/layout/activities.html
@@ -13,6 +13,10 @@
                     {% set course = c.model.Session.query(c.model.Course).filter_by(id=activity.object_id).first() %}
                     {{_(activity.object_type.name.lower())}} {{course.code}}
                 {% endif %}
+                {% if activity.object_type == c.model.ObjectType.ACCOUNT %}
+                    {% set user = c.model.Session.query(c.model.Users).filter_by(id=activity.object_id).first() %}
+                    {{_(activity.object_type.name.lower())}} {{user.email}}
+                {% endif %}
             </td>
             <td>
                 {{ activity.created_at.strftime('%Y/%m/%d - %H:%M') }}
