--- a/manage1/templates/derived/account/signin.html
+++ b/manage1/templates/derived/account/signin.html
@@ -1,29 +1,70 @@
-{% extends "/layout/base.html" %}
-{% block title %}Sign in {% endblock %}
+<?xml version="1.0" encoding="UTF-8"?>
+<html>
+    <head>
+        <title>{% block title %}{{title}}{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        {{h.stylesheet_link(h.url('/assets/custom.css'))}}
+        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
+        <script src="/assets/alert.js"></script>
+        <script src="/assets/schedue.js"></script>
+        <script src="/assets/activity_pusher.js"></script>
+        <script src="/assets/alert.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-{% block content %}
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h1 class="text-center">Signin</h1>
-            {{ h.form(h.url(controller='account', action='signin'), method="POST") }}
-                {% if c.form_errors %}
-                    {% if c.form_errors.has_key('email') %}
-                        <p class="error">{{ c.form_errors['email'] }}</p>
-                    {% endif %}
-                    Email Address: {{ h.text('email', value=c.form_result['email'] or '',
-                        class="form-control") }}
-                    {% if c.form_errors.has_key('password') %}
-                        <p class="error">{{ c.form_errors['password'] }}</p>
-                    {% endif %}
-                    Password: {{ h.password('password', value=c.form_result['password'] or '',
-                        class="form-control") }}
-                {% else %}
-                    Email Address: {{h.text('email', class="form-control")}}
-                    Password: {{h.password('password', class="form-control")}}
-                {% endif %}
-                <br>
-                {{h.submit(value="Sign in", name='submit', class="form-control")}}
-            {{h.end_form()}}
+        <link href='/assets/fullcalendar/fullcalendar.css' rel='stylesheet' />
+        <script src='/assets/fullcalendar/moment.min.js' type="text/javascript"></script>
+        <script src='/assets/fullcalendar/jquery.min.js' type="text/javascript"></script>
+        <script src='/assets/fullcalendar/fullcalendar.js' type="text/javascript"></script>
+
+        <link href="/assets/cropper/cropper.css" rel="stylesheet">
+        <script src="/assets/cropper/cropper.js" type="text/javascript"></script>
+    </head>
+    <body>
+        <div class="header">
+            {% include '/layout/header.html' %}
         </div>
-    </div>
-{% endblock %}
+        <!--<div class="container">-->
+            <div class="row">
+
+                    <ul class="flash">
+                        {% for message in h.flash.pop_messages() %}
+                            <div class="alert alert-{{message.category}}">
+                                <li>{{ message}}</li>
+                            </div>
+                        {% endfor %}
+                    </ul>
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            <h1 class="text-center">Signin</h1>
+                            {{ h.form(h.url(controller='account', action='signin'), method="POST") }}
+                                {% if c.form_errors %}
+                                    {% if c.form_errors.has_key('email') %}
+                                        <p class="error">{{ c.form_errors['email'] }}</p>
+                                    {% endif %}
+                                    Email Address: {{ h.text('email', value=c.form_result['email'] or '',
+                                        class="form-control") }}
+                                    {% if c.form_errors.has_key('password') %}
+                                        <p class="error">{{ c.form_errors['password'] }}</p>
+                                    {% endif %}
+                                    Password: {{ h.password('password', value=c.form_result['password'] or '',
+                                        class="form-control") }}
+                                {% else %}
+                                    Email Address: {{h.text('email', class="form-control")}}
+                                    Password: {{h.password('password', class="form-control")}}
+                                {% endif %}
+                                <br>
+                                {{h.submit(value="Sign in", name='submit', class="form-control")}}
+                            {{h.end_form()}}
+                        </div>
+                    </div>
+                </div>
+        <!--</div>-->
+        <div class="footer">
+            {% include '/layout/footer.html' %}
+        </div>
+    </body>
+</html>
+
+
