--- a/manage1/templates/layout/activities.html
+++ b/manage1/templates/layout/activities.html
@@ -1,28 +1,28 @@
-<div style="width:100%;
-    height:80%;
-    overflow-y:scroll;">
+<div class="activity">
+    {% if c.activities|length != 0 %}
     <h3 class="center">Activity</h3>
     <table class="table table-hover">
         <tbody id="activity">
-        {% for activity in c.activities %}
-        <tr>
-            <td>
-                {{ activity.user.user_info.name }}
-                {{ _(activity.action_type.name.lower()) }}
-                {% if activity.object_type == c.model.ObjectType.COURSE %}
-                    {% set course = c.model.Session.query(c.model.Course).filter_by(id=activity.object_id).first() %}
-                    {{_(activity.object_type.name.lower())}} {{course.code}}
-                {% endif %}
-                {% if activity.object_type == c.model.ObjectType.ACCOUNT %}
-                    {% set user = c.model.Session.query(c.model.Users).filter_by(id=activity.object_id).first() %}
-                    {{_(activity.object_type.name.lower())}} {{user.email}}
-                {% endif %}
-            </td>
-            <td>
-                {{ activity.created_at.strftime('%Y/%m/%d - %H:%M') }}
-            </td>
-        </tr>
-        {% endfor %}
+            {% for activity in c.activities %}
+            <tr>
+                <td>
+                    {{ activity.user.user_info.name }}
+                    {{ _(activity.action_type.name.lower()) }}
+                    {% if activity.object_type == c.model.ObjectType.COURSE %}
+                        {% set course = c.model.Session.query(c.model.Course).filter_by(id=activity.object_id).first() %}
+                        {{_(activity.object_type.name.lower())}} {{course.code}}
+                    {% endif %}
+                    {% if activity.object_type == c.model.ObjectType.ACCOUNT %}
+                        {% set user = c.model.Session.query(c.model.Users).filter_by(id=activity.object_id).first() %}
+                        {{(activity.object_type.name.lower())}} {{user.email}}
+                    {% endif %}
+                </td>
+                <td>
+                    {{ activity.created_at.strftime('%Y/%m/%d - %H:%M') }}
+                </td>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
+    {% endif %}
 </div>
